syntax = "proto3";

package api;

import "validate/validate.proto";

option go_package = "prometheus-manager/api;api";
option java_multiple_files = true;
option java_package = "api";

// 系统状态, 用于表达数据是否可用
enum Status {
  // UNKNOWN 未知, 用于默认值
  STATUS_UNKNOWN = 0;

  // ENABLED 启用
  STATUS_ENABLED = 1;

  // DISABLED 禁用
  STATUS_DISABLED = 2;
}

// 告警状态
enum AlarmStatus {
  // UNKNOWN 未知, 用于默认值
  ALARM_STATUS_UNKNOWN = 0;

  // ALARM 告警
  ALARM_STATUS_ALARM = 1;

  // RESOLVE 已解决
  ALARM_STATUS_RESOLVE = 2;
}

// 分类, 区分字典中的各个模块数据
enum Category {
  // UNKNOWN 未知, 用于默认值
  CATEGORY_UNKNOWN = 0;

  // PromLabel 标签
  CATEGORY_PROM_LABEL = 1;

  // PromAnnotation 注解
  CATEGORY_PROM_ANNOTATION = 2;

  // PromStrategy 策略
  CATEGORY_PROM_STRATEGY = 3;

  // PromStrategyGroup 策略组
  CATEGORY_PROM_STRATEGY_GROUP = 4;

  // AlarmLevel 告警级别
  CATEGORY_ALARM_LEVEL = 5;

  // AlarmStatus 告警状态
  CATEGORY_ALARM_STATUS = 6;

  // NotifyType 通知类型
  CATEGORY_NOTIFY_TYPE = 7;
}

// 通知类型, 用于区分通知方式
enum NotifyType {
  // UNKNOWN 未知, 用于默认值
  NOTIFY_TYPE_UNKNOWN = 0;

  // EMAIL 邮件
  NOTIFY_TYPE_EMAIL = 1;

  // SMS 短信
  NOTIFY_TYPE_SMS = 2;

  // phone 电话
  NOTIFY_TYPE_PHONE = 3;
}

// 通知应用, 用于区分通知方式
enum NotifyApp {
  // UNKNOWN 未知, 用于默认值
  NOTIFY_APP_UNKNOWN = 0;

  // DINGTALK 钉钉
  NOTIFY_APP_DINGTALK = 1;

  // WECHATWORK 企业微信
  NOTIFY_APP_WECHATWORK = 2;

  // FEISHU 飞书
  NOTIFY_APP_FEISHU = 3;
}

// 性别, 用于区分用户性别
enum Gender {
  // UNKNOWN 未知, 用于默认值
  Gender_UNKNOWN = 0;

  // MALE 男
  Gender_MALE = 1;

  // FEMALE 女
  Gender_FEMALE = 2;
}

// 操作动作
enum Action {
  // UNKNOWN 未知, 用于默认值
  ACTION_UNKNOWN = 0;

  // CREATE 创建
  ACTION_CREATE = 1;

  // UPDATE 更新
  ACTION_UPDATE = 2;

  // DELETE 删除
  ACTION_DELETE = 3;

  // GET 获取
  ACTION_GET = 4;

  // ALL 所有
  ACTION_ALL = 5;
}

// 分页请求参数
message PageRequest {
  // 当前页, 从1开始
  int32 curr = 1 [(validate.rules).int32 = {gt: 0}];
  // 每页大小, 1 < size <= 200
  int32 size = 2 [(validate.rules).int32 = {gt: 0, lte: 200}];
}
// 分页返回参数
message PageReply {
  // 当前页码
  int32 curr = 1;
  // 每页大小
  int32 size = 2;
  // 总数
  int64 total = 3;
}

// 返回参数
message Response {
  // 状态码
  int32 code = 1;
  // 返回信息
  string msg = 2;
}